# dependente

./: .coveragerc  .flake8  AUTHORS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  changes.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml  style.yml  test.yml
dependente/: __init__.py  cli.py  converters.py  parsers.py
dependente/tests/: __init__.py  conftest.py  test_cli_utils.py  test_converters.py  test_parsers.py
dependente/tests/data/: sample_pyproject.toml  sample_setup.cfg
env/: requirements-build.txt  requirements-style.txt  requirements-test.txt
