[metadata]
name = dependente
fullname = Dependente
description = Inspect Python package dependencies
long_description = file: README.md
long_description_content_type = text/markdown
author = The Dependente Developers
author_email = fatiandoaterra@protonmail.com
maintainer = "Leonardo Uieda"
maintainer_email = leouieda@gmail.com
license = MIT
license_file = LICENSE.txt
platform = any
keywords = dependencies, pyproject, setuptools
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/fatiando/dependente
project_urls =
    Release Notes = https://github.com/fatiando/dependente/releases
    Bug Tracker = https://github.com/fatiando/dependente/issues
    Source Code = https://github.com/fatiando/dependente

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=8.0.0,<9.0.0
    tomli>=1.1.0,<3.0.0

[options.package_data]
dependente.tests = data/*

[options.entry_points]
console_scripts =
    dependente = dependente.cli:main

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
